# photos

./: .gitignore  README.md  install.sh  pubspec.yaml
lib/: main.dart
lib/pages/: effect.dart  gallery.dart  image_page.dart  items.dart  menu_trailing.dart  settings.dart
linux/: my_application.cc
linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
linux_package/: photos.desktop
plugins/collections/: gallery.idl  gallery.ids
plugins/collections/rust/collections/: Cargo.toml
plugins/collections/rust/collections/idl_types/: Cargo.toml
plugins/collections/rust/collections/idl_types/src/: idl_impl.rs  lib.rs
plugins/collections/rust/collections/src/: lib.rs  server.rs
test/: widget_test.dart
