[package]
name = "collections"
version = "0.1.0"
authors = ["Adriano Souza <adriano.souza113@gmail.com>"]
edition = "2018"
publish = false

[dependencies]
idl_types = { path = "idl_types" }
rand = "0.7"
directories = "2.0"
uuid = { version = "0.8", features = ["v4"] }
crossbeam-channel = "0.4.0"
notify = "5.0.0-pre.6"
tree_magic = "0.2"
systemd = "0.8"
anyhow = "1.0"
image = "~0.23"
bytes = "1"
log = "~0.4"

[workspace]
members = ["idl_types"]